# DP-REX

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .template.env  README.md  docker-compose.yml  pyproject.toml  pytest_ci.ini  quick_setup.py
.github/workflows/: main.yml
container/: django_dockerfile  ui_dockerfile
container/resources/: nginx.conf
django_project/: settings.py  urls.py
django_project/settings/: __init__.py  settings_ci.py  settings_production.py  settings_test.py
tests/: conftest.py  settings.py  settings_ci.py  utils.py
tests/contribution/: common.py  conftest.py  models_django_test.py
tests/entity/: common.py  django_models_test.py  queue_test.py
tests/files/: DBOeS_Parlamentarier50.csv
tests/merge_request/: common.py  conftest.py  models_django_test.py  queue_test.py
tests/person/: common.py  django_models_test.py
tests/tag/: common.py  conftest.py  models_django_definitions_test.py  models_django_instance_test.py  queue_test.py
tests/user/: common.py  conftest.py
tests/util/: django_test.py
ui/: .eslintrc  .gitignore  .prettierrc  babel.config.js  jest.config.js  package-lock.json  package.json  snippets.ts  tsconfig.json
ui/public/: index.html
ui/src/: App.css  App.tsx  config.ts  config.tsx  config_production.ts  custom.scss  header_menu.test.tsx  header_menu.tsx  help_texts.ts  hooks.ts  index.tsx  store.ts
vran/: __init__.py  admin.py  apps.py  exception.py  models.py  signals.py  urls.py  views.py
vran/contribution/: api.py  models_api.py  models_conversion.py  models_django.py
(+394 files in other folders)
