[tool.poetry]
name = "vran-django"
version = "0.1.0"
description = ""
authors = ["Moritz Fürneisen(m.fuerneisen@zbw.eu)"]
readme = "README.md"
packages = [{include = "vran_django"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-ninja = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "*"
coverage = "*"
pdoc3 = "*"
pre-commit = "*"
isort = "*"
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
